MAGNOLIA-3347 Use same login error message on default.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@38646 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_cs.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_cs.properties
@@ -332,6 +332,6 @@ versions.show                   = N\u00e1hled
 webdav.error = Chyba - nepoda\u0159lo se p\u0159ipojen\u00ed na WebDAV server
 
 login.defaultError = Chyba p\u0159i p\u0159ihl\u00e1\u0161en\u00ed. Zkuste to pros\u00edm znovu.
-login.FailedLoginException = U\u017eivatelsk\u00e9 jm\u00e9no a heslo si neodpov\u00eddaj\u00ed. Zkuste to pros\u00edm znovu.
-login.AccountNotFoundException = Tento u\u017eivatelsk\u00fd \u00fa\u010det neexistuje. Zkuste to pros\u00edm znovu nebo kontaktujte administr\u00e1tora.
-login.AccountLockedException = Tento u\u017eivatelsk\u00fd \u00fa\u010det je uzam\u010den. Kontaktujte pros\u00edm administr\u00e1tora.
+#login.FailedLoginException = U\u017eivatelsk\u00e9 jm\u00e9no a heslo si neodpov\u00eddaj\u00ed. Zkuste to pros\u00edm znovu.
+#login.AccountNotFoundException = Tento u\u017eivatelsk\u00fd \u00fa\u010det neexistuje. Zkuste to pros\u00edm znovu nebo kontaktujte administr\u00e1tora.
+#login.AccountLockedException = Tento u\u017eivatelsk\u00fd \u00fa\u010det je uzam\u010den. Kontaktujte pros\u00edm administr\u00e1tora.
