--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_de.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_de.properties
@@ -332,6 +332,6 @@ versions.show                   = Anzeigen
 webdav.error = Ein Fehler ist aufgetreten. Die Verbindung mit dem WebDAV Server ist fehlgeschlagen
 
 login.defaultError = Fehler beim Einloggen. Bitte versuchen Sie es erneut.
-login.FailedLoginException = Nutzername und Passwort stimmen nicht \u00fcberein. Bitte versuchen Sie es erneut.
-login.AccountNotFoundException = Dieses Konto existiert nicht. Bitte versuchen Sie es erneut oder setzen sich mit dem Administrator in Verbindung.
-login.AccountLockedException = Dieses Konto ist gesperrt. Bitte setzen Sie sich mit dem Administrator in Verbindung.
+#login.FailedLoginException = Nutzername und Passwort stimmen nicht \u00fcberein. Bitte versuchen Sie es erneut.
+#login.AccountNotFoundException = Dieses Konto existiert nicht. Bitte versuchen Sie es erneut oder setzen sich mit dem Administrator in Verbindung.
+#login.AccountLockedException = Dieses Konto ist gesperrt. Bitte setzen Sie sich mit dem Administrator in Verbindung.
