--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -333,9 +333,9 @@ versions.show                   = Show
 webdav.error = An error occurred. Unable to connect to WebDAV Server
 
 login.defaultError = Error during login. Please try again.
-login.FailedLoginException = Username and password do not match. Please try again.
-login.AccountNotFoundException = This account does not exist. Please try again or contact an administrator if you feel this is wrong.
-login.AccountLockedException = This account is locked. Please contact an administrator if you feel this is wrong.
+#login.FailedLoginException = Username and password do not match. Please try again.
+#login.AccountNotFoundException = This account does not exist. Please try again or contact an administrator if you feel this is wrong.
+#login.AccountLockedException = This account is locked. Please contact an administrator if you feel this is wrong.
 
 templates.mgnlDeleted.title = Deleted Page
 templates.mgnlDeleted.pageTitle = Deleted Page
