--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_hr.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_hr.properties
@@ -332,6 +332,6 @@ versions.show                   = Poka\u017ei
 webdav.error = Do\u0161lo je do pogre\u0161ke. Povezivanje na WebDAV poslu\u017eitelj nije mogu\u0107e
 
 login.defaultError = Gre\u0161ka prilikom prijave. Molimo poku\u0161ajte ponovno.
-login.FailedLoginException = Korisni\u010dko ime i zaporka se ne podudaraju. Molimo poku\u0161ajte ponovno.
-login.AccountNotFoundException = Ovaj ra\u010dun ne postoji. Molimo poku\u0161ajte ponovno ili kontaktirajte administratora.
-login.AccountLockedException = Ovaj ra\u010dun je zaklju\u010dan. Molimo kontaktirajte administratora.
+#login.FailedLoginException = Korisni\u010dko ime i zaporka se ne podudaraju. Molimo poku\u0161ajte ponovno.
+#login.AccountNotFoundException = Ovaj ra\u010dun ne postoji. Molimo poku\u0161ajte ponovno ili kontaktirajte administratora.
+#login.AccountLockedException = Ovaj ra\u010dun je zaklju\u010dan. Molimo kontaktirajte administratora.
