--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_it.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_it.properties
@@ -332,6 +332,6 @@ versions.show                   = Mostra
 webdav.error = Errore. impossibile collegarsi al server WebDAV
 
 login.defaultError = Errore durante la login, riprova.
-login.FailedLoginException = Username e password non corrispondono, riprova.
-login.AccountNotFoundException = Questo account non esiste. Prova ancora o contatta un amministratore se pensi che questo non sia corretto.
-login.AccountLockedException = Questo account \u00e8 stato bloccato. Contatta un amministratore se pensi che questo non sia corretto.
+#login.FailedLoginException = Username e password non corrispondono, riprova.
+#login.AccountNotFoundException = Questo account non esiste. Prova ancora o contatta un amministratore se pensi che questo non sia corretto.
+#login.AccountLockedException = Questo account \u00e8 stato bloccato. Contatta un amministratore se pensi che questo non sia corretto.
