--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_nl.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_nl.properties
@@ -332,6 +332,6 @@ versions.show                   = Toon in de navigatie ...
 webdav.error = Er is een fout opgetreden. Kon geen verbinding maken met WebDAV server
 
 login.defaultError = Fout bij het inloggen. Probeer het opnieuw.
-login.FailedLoginException = Gebruikersnaam en wachtwoord komen niet overeen. Probeer het opnieuw.
-login.AccountNotFoundException = Dit account bestaat niet. Probeer het opnieuw of neem contact op met een beheerder als u denkt dat deze melding onjuist is.
-login.AccountLockedException = Dit account is geblokkeerd. Neem contact op met een beheerder als u denkt dat deze melding onjuist is.
+#login.FailedLoginException = Gebruikersnaam en wachtwoord komen niet overeen. Probeer het opnieuw.
+#login.AccountNotFoundException = Dit account bestaat niet. Probeer het opnieuw of neem contact op met een beheerder als u denkt dat deze melding onjuist is.
+#login.AccountLockedException = Dit account is geblokkeerd. Neem contact op met een beheerder als u denkt dat deze melding onjuist is.
