--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_TW.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_TW.properties
@@ -332,6 +332,6 @@ versions.show                   = \u986f\u793a
 webdav.error = \u767c\u751f\u4e00\u500b\u932f\u8aa4\u3002\u7121\u6cd5\u9023\u63a5\u5230WebDAV\u670d\u52d9\u5668\u3002
 
 login.defaultError = \u767b\u9304\u6642\u767c\u751f\u932f\u8aa4\uff0c\u8acb\u518d\u8a66\u4e00\u6b21\u3002
-login.FailedLoginException = \u5e33\u865f\u6216\u5bc6\u78bc\u932f\u8aa4\uff0c\u8acb\u518d\u8a66\u4e00\u6b21\u3002
-login.AccountNotFoundException = \u6b64\u5e33\u865f\u4e0d\u5b58\u5728\uff0c\u8acb\u518d\u8a66\u4e00\u6b21\u3002\u82e5\u60a8\u6709\u4efb\u4f55\u554f\u984c\uff0c\u8acb\u9023\u7e6b\u7ba1\u7406\u8005\u3002
-login.AccountLockedException = \u6b64\u5e33\u865f\u5df2\u88ab\u9396\u5b9a\u3002\u82e5\u60a8\u6709\u4efb\u4f55\u554f\u984c\uff0c\u8acb\u9023\u7e6b\u7ba1\u7406\u8005\u3002
+#login.FailedLoginException = \u5e33\u865f\u6216\u5bc6\u78bc\u932f\u8aa4\uff0c\u8acb\u518d\u8a66\u4e00\u6b21\u3002
+#login.AccountNotFoundException = \u6b64\u5e33\u865f\u4e0d\u5b58\u5728\uff0c\u8acb\u518d\u8a66\u4e00\u6b21\u3002\u82e5\u60a8\u6709\u4efb\u4f55\u554f\u984c\uff0c\u8acb\u9023\u7e6b\u7ba1\u7406\u8005\u3002
+#login.AccountLockedException = \u6b64\u5e33\u865f\u5df2\u88ab\u9396\u5b9a\u3002\u82e5\u60a8\u6709\u4efb\u4f55\u554f\u984c\uff0c\u8acb\u9023\u7e6b\u7ba1\u7406\u8005\u3002
