--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt_BR.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt_BR.properties
@@ -332,6 +332,6 @@ versions.show                   = Mostrar
 webdav.error = Ocorreu um erro. N\u00e3o foi poss\u00edvel conectar ao servidor WebDAV
 
 login.defaultError = Erro durante o login. Por favor, tente novamente.
-login.FailedLoginException = Nome de usu\u00e1rio e senha n\u00e3o correspondem. Por favor, tente novamente.
-login.AccountNotFoundException = Esta conta n\u00e3o existe. Por favor, tente novamente ou entre em contato com o administrador caso esta informa\u00e7\u00e3o n\u00e3o esteja correta.
-login.AccountLockedException = Esta conta est\u00e1 bloqueada. Por favor, entre em contato com o administrador caso esta informa\u00e7\u00e3o n\u00e3o esteja correta.
+#login.FailedLoginException = Nome de usu\u00e1rio e senha n\u00e3o correspondem. Por favor, tente novamente.
+#login.AccountNotFoundException = Esta conta n\u00e3o existe. Por favor, tente novamente ou entre em contato com o administrador caso esta informa\u00e7\u00e3o n\u00e3o esteja correta.
+#login.AccountLockedException = Esta conta est\u00e1 bloqueada. Por favor, entre em contato com o administrador caso esta informa\u00e7\u00e3o n\u00e3o esteja correta.
