MAGNOLIA-2251 Tree and context menu changes.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@38691 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -288,7 +288,7 @@ tree.users.menu.newFolder                  = New folder
 tree.users.name                            = User name
 tree.users.status                          = Status
 tree.web.date                              = Mod. date
-tree.web.menu.activate                     = Activate this page
+tree.web.menu.activate                     = Activate changes
 tree.web.menu.activateInclSubs             = Activate incl. sub pages
 tree.web.menu.copy                         = Copy page
 tree.web.menu.deactivate                   = De-activate
