MAGNOLIA-3364: - use a js list subclass - pass path and repository to the constructor - add diff buttons if available - conditions to make the buttons available only if a version is selected
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@38790 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -324,7 +324,9 @@ groups.edit.description         = Description
 
 versions = Versions
 
-versions.diff                   = Compare
+versions.compare                = Compare
+versions.compareWithCurrent     = Compare with current
+versions.compareWithPrevious    = Compare with previous
 versions.restore                = Restore
 versions.restore.exception      = Wasn''t able to restore\: {0}
 versions.restore.latest.success = Successfully restored latest version.
