MAGNOLIA-3368 Deactivation workflow.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@38855 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_en.properties
+++ b/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_en.properties
@@ -25,6 +25,8 @@ dialogs.editActivationWorkItem.tabActivation.subpages  = Sub items
 dialogs.editActivationWorkItem.tabActivation.startDate = Publication Date
 dialogs.editActivationWorkItem.tabActivation.endDate   = Expiration Date
 
+dialogs.editActivationWorkItem.tabDeactivation           = Deactivation
+dialogs.editActivationWorkItem.tabDeactivation.startDate = Deactivation Date
 subpages.version = Version
 subpages.date    = Date
 subpages.status  = Status
