MAGNOLIA-3364: message for initial version and changes label
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@38884 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -324,9 +324,11 @@ groups.edit.description         = Description
 
 versions = Versions
 
+versions.changes                = Changes
 versions.compare                = Compare
 versions.compareWithCurrent     = Compare with current
 versions.compareWithPrevious    = Compare with previous
+versions.initialVersion         = Initial version
 versions.restore                = Restore
 versions.restore.exception      = Wasn''t able to restore\: {0}
 versions.restore.latest.success = Successfully restored latest version.
