MAGNOLIA-2251: first draft of deleted page beautification
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@38975 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -343,7 +343,11 @@ login.defaultError = Error during login. Please try again.
 
 templates.mgnlDeleted.title = Deleted Page
 templates.mgnlDeleted.pageTitle = Deleted Page
-templates.mgnlDeleted.showLastVersion = Show the page before deletion
-templates.mgnlDeleted.restoreLastVersion = Undelete the page
-templates.mgnlDeleted.restoreLastVersionRecursively = Undelete the page including sub-pages
+templates.mgnlDeleted.showLastVersion = Show previous version
+templates.mgnlDeleted.restoreLastVersion = Restore previous version
+templates.mgnlDeleted.restoreLastVersionRecursively = Restore previous version including sub-pages
 templates.mgnlDeleted.versioningNotSupported = There are no previous versions of the deleted content and as such it can't be previewed nor undeleted.
+templates.mgnlDeleted.pageDeleted = Page deleted
+templates.mgnlDeleted.pageDeleted.message = This page can't be edited as it has been marked for deletion.
+templates.mgnlDeleted.options = Options:
+templates.mgnlDeleted.toAdminCentral = Go to AdminCentral
