MAGNOLIA-2251 - Refresh session on external modifications during restore. - Automatically comment on the node during delete and restore ops.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@38988 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -333,6 +333,8 @@ versions.restore                = Restore
 versions.restore.exception      = Wasn''t able to restore\: {0}
 versions.restore.latest.success = Successfully restored latest version.
 versions.show                   = Show
+versions.comment.deleted        = Automatically created version prior deletion
+versions.comment.restore        = Automatically created version prior restore
 
 webdav.error = An error occurred. Unable to connect to WebDAV Server
 
