--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -347,7 +347,7 @@ templates.mgnlDeleted.title = Deleted Page
 templates.mgnlDeleted.pageTitle = Deleted Page
 templates.mgnlDeleted.showLastVersion = Show previous version
 templates.mgnlDeleted.restoreLastVersion = Restore previous version
-templates.mgnlDeleted.restoreLastVersionRecursively = Restore previous version including sub-pages
+templates.mgnlDeleted.restoreLastVersionRecursively = Restore previous version incl. sub pages
 templates.mgnlDeleted.versioningNotSupported = There are no previous versions of the deleted content and as such it can't be previewed nor undeleted.
 templates.mgnlDeleted.pageDeleted = Page deleted
 templates.mgnlDeleted.pageDeleted.message = This page can't be edited as it has been marked for deletion.
