more precise message for staged deletion
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39551 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -231,8 +231,8 @@ tree.config.menu.newNodeData               = New node data
 tree.config.status                         = Status
 tree.config.type                           = Type
 tree.config.value                          = Value
-tree.deletenode.confirm.text.js = The node\n{0}\nwill be deleted immediately.\n\nAre you sure to continue?
-tree.deletenode.confirm.deactivation.text.js = The node\n{0}\nwill be DE-ACTIVATED and deleted immediately.\n\nAre you sure to continue?
+tree.deletenode.confirm.text.js = The node\n{0}\nwill be marked for deletion (you will be able to undo this operation).\n\nAre you sure to continue?
+tree.deletenode.confirm.deactivation.text.js = The node\n{0}\nwill be DE-ACTIVATED and marked for deletion (you will be able to undo this operation).\n\nAre you sure to continue?
 tree.deletenode.confirm.title.js           = Delete node?
 tree.error.activate                        = Can't activate\:
 tree.error.copy                            = Can't copy\:
