messages for staged deletion
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39742 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_it.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_it.properties
@@ -232,7 +232,9 @@ tree.config.status                         = Stato
 tree.config.type                           = Tipo
 tree.config.value                          = Valore
 tree.deletenode.confirm.text.js = Il nodo\n{0}\nsar\u00e0 disattivato dal sito pubblico e cancellato immediatamente.\n\nSei sicuro di voler continuare?
-tree.deletenode.confirm.deactivation.text.js = Il nodo\n{0}\nsar\u00e0 disattivato dal sito pubblico e cancellato immediatamente.
+tree.deletenode.confirm.deactivation.text.js = Il nodo\n{0}\nsar\u00e0 disattivato dal sito pubblico e cancellato immediatamente.\n\nSei sicuro di voler continuare?
+tree.deletenode.staged.confirm.deactivation.text.js = Il nodo\n{0}\nsar\u00e0 disattivato dal sito pubblico e cancellato (l'operazione \u00e8 annullabile).\n\nSei sicuro di voler continuare?
+tree.deletenode.staged.confirm.text.js = Il nodo\n{0}\nsar\u00e0 cancellato (l'operazione \u00e8 annullabile).\n\nSei sicuro di voler continuare?
 tree.deletenode.confirm.title.js           = Elimino il nodo?
 tree.error.activate                        = Non posso pubblicare\:
 tree.error.copy                            = Non posso copiare\:
