--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_de.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_de.properties
@@ -125,7 +125,7 @@ importexport.repository      = Repository
 
 inline.delete.text.js       = Der ausgew\u00e4hlte Absatz wird sofort gel\u00f6scht.\n\nWirklich fortfahren?
 inline.delete.title.js      = Absatz l\u00f6schen?
-inline.move.aboveThisOne.js = Den ausgew\u00e4hlten Absatz \u00fcber diesem einf\u00fcgen 
+inline.move.aboveThisOne.js = Den ausgew\u00e4hlten Absatz \u00fcber diesem einf\u00fcgen
 
 linkbrowser.refresh           = Aktualisieren
 linkbrowser.role.fullrolename = Vollst\u00e4ndiger Rollen-Name
@@ -233,6 +233,8 @@ tree.config.type                           = Typ
 tree.config.value                          = Wert
 tree.deletenode.confirm.text.js = Der Knoten\n{0}\nwird deaktiviert und sofort gel\u00f6scht.\n\nWirklich fortfahren?
 tree.deletenode.confirm.deactivation.text.js = Der Knoten {0} wird deaktiviert und sofort gel\u00f6scht. Wirklich fortfahren?
+tree.deletenode.staged.confirm.deactivation.text.js = Der Knoten\n{0}\nwird deaktiviert zum Löschen markiert (diese Operation kann rückgängig gemacht werden).\n\nWirklich fortfahren?
+tree.deletenode.staged.confirm.text.js = Der Knoten\n{0}\nwird zum Löschen markiert (diese Operation kann rückgängig gemacht werden).\n\nWirklich fortfahren?
 tree.deletenode.confirm.title.js           = Knoten l\u00f6schen?
 tree.error.activate                        = Aktivierung nicht m\u00f6glich\:
 tree.error.copy                            = Kopieren nicht m\u00f6glich\:
