--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_de.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_de.properties
@@ -233,8 +233,8 @@ tree.config.type                           = Typ
 tree.config.value                          = Wert
 tree.deletenode.confirm.text.js = Der Knoten\n{0}\nwird deaktiviert und sofort gel\u00f6scht.\n\nWirklich fortfahren?
 tree.deletenode.confirm.deactivation.text.js = Der Knoten {0} wird deaktiviert und sofort gel\u00f6scht. Wirklich fortfahren?
-tree.deletenode.staged.confirm.deactivation.text.js = Der Knoten\n{0}\nwird deaktiviert zum L\u00f6schen markiert (diese Operation kann r\u00FCckg\u00E4ngig gemacht werden).\n\nWirklich fortfahren?
-tree.deletenode.staged.confirm.text.js = Der Knoten\n{0}\nwird zum L\u00f6schen markiert (diese Operation kann r\u00FCckg\u00E4ngig gemacht werden).\n\nWirklich fortfahren?
+tree.deletenode.staged.confirm.deactivation.text.js = Der Knoten\n{0}\nwird deaktiviert zum L\u00f6schen markiert (diese Operation kann r\u00fcckg\u00e4ngig gemacht werden).\n\nWirklich fortfahren?
+tree.deletenode.staged.confirm.text.js = Der Knoten\n{0}\nwird zum L\u00f6schen markiert (diese Operation kann r\u00fcckg\u00e4ngig gemacht werden).\n\nWirklich fortfahren?
 tree.deletenode.confirm.title.js           = Knoten l\u00f6schen?
 tree.error.activate                        = Aktivierung nicht m\u00f6glich\:
 tree.error.copy                            = Kopieren nicht m\u00f6glich\:
