staged deletion messagesfor sv locale
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39749 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_sv.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_sv.properties
@@ -233,6 +233,8 @@ tree.config.type                           = Typ
 tree.config.value                          = V\u00e4rde
 tree.deletenode.confirm.text.js = Noden\n{0}\nkommer att avaktiveras och tas bort omedelbart.\n\n\u00c4r du s\u00e4ker p\u00e5 att du vill forts\u00e4tta?
 # missing translation for: tree.deletenode.confirm.deactivation.text.js
+tree.deletenode.staged.confirm.deactivation.text.js = Noden {0} kommer att deaktiveras och markeras f\u00f6r borttagning (\u00e5tg\u00e4rden kan \u00e5ngras).\n\nVill du forts\u00e4tta?
+tree.deletenode.staged.confirm.text.js = Noden {0} kommer att markeras f\u00f6r borttagning (\u00e5tg\u00e4den kan \u00e5ngras).\n\nVill du forts\u00e4tta?
 tree.deletenode.confirm.title.js           = Ta bort nod?
 tree.error.activate                        = Can't activate\:
 tree.error.copy                            = Can't copy\:
