--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fi.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fi.properties
@@ -233,6 +233,8 @@ tree.config.type                           = Tyyppi
 tree.config.value                          = Arvo
 tree.deletenode.confirm.text.js = {0}\npoistetaan v\u00e4litt\u00f6m\u00e4sti.\n\nHaluatko varmasti jatkaa?
 tree.deletenode.confirm.deactivation.text.js = {0}\npoistetaan v\u00e4litt\u00f6m\u00e4sti.\n\nHaluatko varmasti jatkaa?
+tree.deletenode.staged.confirm.text.js = Kohde merkit\u00e4\u00e4n poistettavaksi. (Voit perua t\u00e4m\u00e4n toiminnon my\u00f6hemmin.)\n\nHaluatko varmasti jatkaa?
+tree.deletenode.staged.confirm.deactivation.text.js = Kohde poistetaan k\u00e4yt\u00f6st\u00e4 ja merkit\u00e4\u00e4n poistettavaksi. (Voit perua t\u00e4m\u00e4n toiminnon my\u00f6hemmin.)\n\nHaluatko varmasti jatkaa?
 tree.deletenode.confirm.title.js           = Poista kohde?
 tree.error.activate                        = Aktivointi ep\u00e4onnistui\:
 tree.error.copy                            = Kopiointi ep\u00e4onnistui\:
