MAGNOLIA-3415: en message
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@40150 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -233,8 +233,7 @@ tree.config.type                           = Type
 tree.config.value                          = Value
 tree.deletenode.confirm.text.js = The node\n{0}\nwill be deleted immediately.\n\nAre you sure?
 tree.deletenode.confirm.deactivation.text.js = The node\n{0}\nwill be DE-ACTIVATED and deleted immediately.\n\nAre you sure?
-tree.deletenode.staged.confirm.deactivation.text.js = The node\n{0}\nwill be DE-ACTIVATED and marked for deletion (you will be able to undo this operation).\n\nAre you sure?
-tree.deletenode.staged.confirm.text.js = The node\n{0}\nwill be marked for deletion (you will be able to undo this operation).\n\nAre you sure?
+tree.deletenode.staged.confirm.text.js = The node\n{0}\n and its sub nodes will be marked for deletion.\n\nThey will be deleted from all instances, once you activate this change.
 tree.deletenode.confirm.title.js           = Delete node?
 tree.error.activate                        = Can't activate\:
 tree.error.copy                            = Can't copy\:
