MAGNOLIA-3415: Czech messages
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@40156 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_cs.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_cs.properties
@@ -234,7 +234,7 @@ tree.config.value                          = Hodnota
 tree.deletenode.confirm.text.js = Uzel\n{0}\nbude smaz\u00e1n.\n\nJste si jist?
 tree.deletenode.confirm.deactivation.text.js = Uzel\n{0}\nbude  deaktivov\u00e1n a smaz\u00e1n.\n\nJste si jist?
 tree.deletenode.staged.confirm.deactivation.text.js = Uzel\n{0}\nbude deaktivov\u00e1n a ozna\u010den pro vymaz\u00e1n\u00ed (st\u00e1le bude mo\u017eno vr\u00e1tit tuto akci).\n\nUr\u010dite chcete pokra\u010dovat?
-tree.deletenode.staged.confirm.text.js = Uzel\n{0}\nbude ozna\u010den pro vymaz\u00e1n\u00ed (st\u00e1le bude mo\u017eno vr\u00e1tit tuto akci).\n\nUr\u010dite chcete pokra\u010dovat?
+tree.deletenode.staged.confirm.text.js = Uzel \n{0}\n a jeho pod-uzly budou ozna\u010deny k smaz\u00e1n\u00ed. Aktivac\u00ed t\u00e9to zm\u011bny budou smaz\u00e1ny.
 tree.deletenode.confirm.title.js           = Smazat uzel?
 tree.error.activate                        = Nelze aktivovat\:
 tree.error.copy                            = Nelze kop\u00edrovat\:
