MGNLDMS-202 change label of activation op to "activate changes"
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@40168 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_cs.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_cs.properties
@@ -219,7 +219,7 @@ roles.permission.syndicate   = Aktivovat
 system.restart = Jeden nebo v\u00edce modul\u016f vy\u017eaduj\u00ed restart aplika\u010dn\u00edho serveru pro na\u010dten\u00ed aktu\u00e1ln\u00ed konfigurace
 
 tree.config.date                           = Zm\u011bn\u011bno
-tree.config.menu.activate                  = Aktivovat tento uzel
+tree.config.menu.activate                  = Aktivovat zm\u011bny
 tree.config.menu.activateInclSubs          = Aktivovat v\u010detn\u011b v\u0161ech pod-uzl\u016f
 tree.config.menu.copy                      = Kop\u00edrovat
 tree.config.menu.deactivate                = Deaktivovat
