--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -219,7 +219,7 @@ roles.permission.syndicate   = Activate
 system.restart = One or more module need a restart of the container
 
 tree.config.date                           = Mod. date
-tree.config.menu.activate                  = Activate this node
+tree.config.menu.activate                  = Activate changes
 tree.config.menu.activateInclSubs          = Activate incl. sub nodes
 tree.config.menu.copy                      = Copy
 tree.config.menu.deactivate                = De-activate
