MAGNOLIA-3415: integrated new translation. Thanks Teresa, Antti, Tobias, Greg, Daniel. P.S. for Antti: Katso merta!
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@40176 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_es.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_es.properties
@@ -231,7 +231,8 @@ tree.config.menu.newNodeData               = Nuevos datos del nodo
 tree.config.status                         = Estado
 tree.config.type                           = Tipo
 tree.config.value                          = Valor
-tree.deletenode.confirm.text.js = El nodo\n{0}\n ser\u00e1 desactivado y suprimido inmediatamente. \n\n\\u00bfEst\u00e1 usted seguro de continuar?
+tree.deletenode.confirm.text.js = El nodo\n{0}\n ser\u00e1 desactivado y suprimido inmediatamente. \n\n\u00bfEst\u00e1 usted seguro de continuar?
+tree.deletenode.staged.confirm.text.js = El nodo \n{0}\n y sus subnodos ser\u00e1n marcados para su borrado. Van a ser borrados de todas las instancias, una vez se active \u00e9ste cambio.
 # missing translation for: tree.deletenode.confirm.deactivation.text.js
 tree.deletenode.confirm.title.js           = \u00bfSuprimir nodo?
 tree.error.activate                        = No se puede activar\:
