--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fr.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fr.properties
@@ -233,8 +233,7 @@ tree.config.type                           = Type
 tree.config.value                          = Valeur
 tree.deletenode.confirm.text.js = Le noeud \n{0}\n va \u00eatre imm\u00e9diatement d\u00e9sactiv\u00e9 et \u00e9ffac\u00e9.\n\nEtes-vous s\u00fbr de vouloir continuer ?
 tree.deletenode.confirm.deactivation.text.js = Le noeud\n{0}\nva \u00eatre D\u00c9SACTIV\u00c9 et supprim\u00e9 imm\u00e9diatement.
-tree.deletenode.staged.confirm.deactivation.text.js = Le noeud\n{0}\nva \u00eatre D\u00c9SACTIV\u00c9 et marqu\u00e9 pour suppression (cette opération est annulable).\n\nEtes-vous s\u00fbr de vouloir continuer ?
-tree.deletenode.staged.confirm.text.js = Le noeud\n{0}\nva \u00eatre marqu\u00e9 pour suppression (cette op\u00e9ration est annulable).\n\nEtes-vous s\u00fbr de vouloir continuer ?
+tree.deletenode.staged.confirm.text.js = Le noeud\n{0}\n et ses sous-noeuds vont \u00eatre marqu\u00e9s pour suppression. Ils seront supprim\u00e9s de toutes les instances lorsque vous activez ce changement.
 tree.deletenode.confirm.title.js           = Effacer le noeud ?
 tree.error.activate                        = Echec de l'activation \:
 tree.error.copy                            = Copie impossible \:
