--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -354,3 +354,8 @@ templates.mgnlDeleted.pageDeleted = Page deleted
 templates.mgnlDeleted.pageDeleted.message = This page can't be edited as it has been marked for deletion.
 templates.mgnlDeleted.options = Options:
 templates.mgnlDeleted.toAdminCentral = Go to AdminCentral
+
+status.activated = activated
+status.modified = modified
+status.notActivated = not activated
+status.cannotWrite = no write permission
