MAGNOLIA-3641 - use better translation
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@44126 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_de.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_de.properties
@@ -2,7 +2,7 @@ buttons.admincentral    = AdminCentral
 buttons.delete          = L\u00f6schen
 buttons.edit            = Bearbeiten
 buttons.enable          = Freigeben
-buttons.move            = Bewegen
+buttons.move            = Verschieben
 buttons.new             = Neu
 buttons.new.noparagraph = Es ist kein Paragraph verf\u00fcgbar ...
 buttons.preview         = &laquo; Vorschau
