SCRUM-164: added description to menu item definition. Added couple of sample descriptions to admin-central config.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@45893 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-admincentral/src/main/resources/info/magnolia/ui/admincentral/messages.properties
+++ b/magnolia-ui-admincentral/src/main/resources/info/magnolia/ui/admincentral/messages.properties
@@ -367,3 +367,6 @@ status.activated = activated
 status.modified = modified
 status.notActivated = not activated
 status.readOnly = read only
+
+workarea.content.description=This is the content workarea description
+menu.website.description=This is the website menu description
