SCRUM-164: more descriptions for menu items.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@45915 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-admincentral/src/main/resources/info/magnolia/ui/admincentral/messages.properties
+++ b/magnolia-ui-admincentral/src/main/resources/info/magnolia/ui/admincentral/messages.properties
@@ -368,5 +368,11 @@ status.modified = modified
 status.notActivated = not activated
 status.readOnly = read only
 
-workarea.content.description=This is the content workarea description
+#Magnolia 5.0
 menu.website.description=This is the website menu description
+menu.assets.description=This is the assets menu description
+menu.data.description=This is the data menu description
+menu.security.description=This is the security menu description
+menu.configuration.description=This is the configuration menu description
+menu.tools.description=This is the tools menu description
+menu.store-client.description=This is the store menu description
